# 42_python_for_data_science

./: README.md
module0/ex01/: format_ft_time.py
module0/ex02/: find_ft_type.py
module00/: README.md  requirements.txt
module00/ex00/: Hello.py
module00/ex01/: format_ft_time.py
module00/ex02/: tester.py
module00/ex03/: NULL_not_found.py  tester.py
module00/ex04/: whatis.py
module00/ex05/: building.py
module00/ex06/: filterstring.py  ft_filter.py  tester.py
module00/ex07/: sos.py
module00/ex08/: Loading.py  tester.py
module00/ex09/: LICENSE  README.md  pyproject.toml
module00/ex09/src/ft_package/: __init__.py  ft_package.py
module00/ex09/tests/: tester.py
module01/: README.md
module01/ex00/: give_bmi.py  tester.py
module01/ex01/: array2D.py  tester.py
module01/ex02/: load_image.py  tester.py
module01/ex03/: load_image.py  zoom.py
module01/ex04/: load_image.py  rotate.py
module01/ex05/: load_image.py  pimp_image.py  tester.py
module02/: README.md
module02/data/: bad.csv
module02/ex00/: load_csv.py  tester.py
module02/ex01/: aff_life.py  load_csv.py
module02/ex02/: aff_pop.py  load_csv.py
module02/ex03/: projection_life.py
module03/: README.md
module03/ex00/: S1E9.py  tester.py
module03/ex01/: S1E7.py  tester.py
module03/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
module03/ex03/: ft_calculator.py  tester.py
module03/ex04/: ft_calculator.py
module04/: README.md
module04/ex00/: statistics.py  tester.py
module04/ex01/: in_out.py
module04/ex02/: callLimit.py
module04/ex03/: new_student.py  (+1 more)
