[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  {name="myoshika"},
  {email="myoshika@42.fr"},
]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
'home-page' = 'https://github.com/myoshika/ft_package'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
