[project]
name = "ft_package"
dynamic = ["version"]
description = "A sample test package"
authors = [
  {name="myoshika", email="myoshika@42.fr"},
]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
'home-page' = 'https://github.com/myoshika/ft_package'

[tool.setuptools.dynamic]
version.attr = "ft_package.__version__"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
